# github-action-docker-test

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: test.yml
src/docker_test/: __init__.py  main.py
tests/: test_hello.py
